Use dom style YAML parsing with YamlCodeblockConfig.java